{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 46,
  "lineage": "2556399b-8fe4-dc53-397e-4319c4059bde",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd",
            "arn_suffix": "app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-my-eb-app-my-eb-env-dev-alb-1218217907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-eb-app-my-eb-env-dev-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-056dabc4111786a34"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnets": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "tags": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-alb"
            },
            "tags_all": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-alb"
            },
            "vpc_id": "vpc-0975e41529fdd220e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:listener/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd/0666820b1bafe4f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:targetgroup/my-eb-app-my-eb-env-dev-tg/301af6e96bd33205",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911287867452:listener/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd/0666820b1bafe4f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:listener/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd/0666820b1bafe4f9"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:targetgroup/my-eb-app-my-eb-env-dev-tg/301af6e96bd33205",
            "arn_suffix": "targetgroup/my-eb-app-my-eb-env-dev-tg/301af6e96bd33205",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911287867452:targetgroup/my-eb-app-my-eb-env-dev-tg/301af6e96bd33205",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:911287867452:loadbalancer/app/my-eb-app-my-eb-env-dev-alb/009af8ac4d69bfcd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-eb-app-my-eb-env-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911287867452:targetgroup/my-eb-app-my-eb-env-dev-tg/301af6e96bd33205"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-056dabc4111786a34",
            "description": "Allow HTTP and HTTPS inbound traffic for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056dabc4111786a34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eb-app-my-eb-env-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "sg-056dabc4111786a34",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-06d7c1450f5a65bdd",
            "description": "Allow HTTPS inbound for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d7c1450f5a65bdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from within the VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eb-app-my-eb-env-dev-endpoints-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-endpoints-sg"
            },
            "tags_all": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "sg-06d7c1450f5a65bdd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:security-group/sg-08b67c8f5baac588e",
            "description": "Allow traffic from ALB SG to EB instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b67c8f5baac588e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056dabc4111786a34"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-eb-app-my-eb-env-dev-instance-sg",
            "name_prefix": "",
            "owner_id": "911287867452",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-instance-sg"
            },
            "tags_all": {
              "Environment": "my-eb-env-dev",
              "Name": "my-eb-app-my-eb-env-dev-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "sg-08b67c8f5baac588e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "eb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-095443323169e0bcf",
            "dns_entry": [
              {
                "dns_name": "vpce-095443323169e0bcf-pmj0gug2.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-095443323169e0bcf-pmj0gug2-us-east-1a.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-095443323169e0bcf-pmj0gug2-us-east-1b.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-095443323169e0bcf-pmj0gug2-us-east-1c.elasticbeanstalk.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticbeanstalk.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0553073325B5KU50X0GR"
              },
              {
                "dns_name": "elasticbeanstalk.us-east-1.api.aws",
                "hosted_zone_id": "Z0543631TTAF8P7GTSZH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-095443323169e0bcf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-028ce91ed9c7ce054",
              "eni-06a2766551c3db472",
              "eni-09a09740b785508b4"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06d7c1450f5a65bdd"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticbeanstalk",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.100",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.253",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.4",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpce-095443323169e0bcf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.endpoints_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "eb_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0c62ca33e0fc4873c",
            "dns_entry": [
              {
                "dns_name": "vpce-0c62ca33e0fc4873c-lpjbjrcy.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c62ca33e0fc4873c-lpjbjrcy-us-east-1b.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c62ca33e0fc4873c-lpjbjrcy-us-east-1a.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c62ca33e0fc4873c-lpjbjrcy-us-east-1c.elasticbeanstalk-health.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "elasticbeanstalk-health.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0791698MS3BIY43IQ33"
              },
              {
                "dns_name": "elasticbeanstalk-health.us-east-1.api.aws",
                "hosted_zone_id": "Z0544470XD2COCGHYY79"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c62ca33e0fc4873c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e24ab6dff3fbd69",
              "eni-05605b1a65a3e3c3a",
              "eni-0ac1b5c3823746bd6"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06d7c1450f5a65bdd"
            ],
            "service_name": "com.amazonaws.us-east-1.elasticbeanstalk-health",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.235",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.29",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.83",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpce-0c62ca33e0fc4873c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.endpoints_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-0fb0c68307e6468dd",
            "dns_entry": [
              {
                "dns_name": "vpce-0fb0c68307e6468dd-j1cx1cl0.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fb0c68307e6468dd-j1cx1cl0-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fb0c68307e6468dd-j1cx1cl0-us-east-1c.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fb0c68307e6468dd-j1cx1cl0-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02670892VJEQI5WI1A27"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z028859371A0W2DWN2X6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fb0c68307e6468dd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0001d64d2a819c4fc",
              "eni-0103f117cf344b88b",
              "eni-094c6c3080242c4cc"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06d7c1450f5a65bdd"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.239",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.6",
                "subnet_id": "subnet-0db123d54c271e391"
              },
              {
                "ipv4": "10.49.1.98",
                "subnet_id": "subnet-07f28a28b8830044b"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpce-0fb0c68307e6468dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.endpoints_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-03e6e1b4d6b757b07",
            "dns_entry": [
              {
                "dns_name": "vpce-03e6e1b4d6b757b07-qe4incgd.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e6e1b4d6b757b07-qe4incgd-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e6e1b4d6b757b07-qe4incgd-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03e6e1b4d6b757b07-qe4incgd-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z083273626MEB4VMS95RJ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08327432JV1JCOW9Z24A"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03066461MSOTMVQVAZ7R"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z03066433HU5MVAA50VF1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03e6e1b4d6b757b07",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0020ca97008be6401",
              "eni-03a4fd50867164c6a",
              "eni-06c1bb89e01228df7"
            ],
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-06d7c1450f5a65bdd"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.49.1.125",
                "subnet_id": "subnet-07f28a28b8830044b"
              },
              {
                "ipv4": "10.49.1.236",
                "subnet_id": "subnet-0b17ab8abf3a8b378"
              },
              {
                "ipv4": "10.49.1.50",
                "subnet_id": "subnet-0db123d54c271e391"
              }
            ],
            "subnet_ids": [
              "subnet-07f28a28b8830044b",
              "subnet-0b17ab8abf3a8b378",
              "subnet-0db123d54c271e391"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpce-03e6e1b4d6b757b07",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.endpoints_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911287867452:vpc-endpoint/vpce-02a0c21c876a8eeaa",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02a0c21c876a8eeaa",
            "ip_address_type": "ipv4",
            "owner_id": "911287867452",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0975e41529fdd220e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpce-02a0c21c876a8eeaa",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}